# tracker_dskcf

./: .gitignore  CMakeLists.txt  Ds-kcf算法.pptx  README.md  kcf-Dskcf算法总结.pptx
src/: kcftracker.cpp  kcftracker.hpp  main.cpp  tracker.h
